changement des liens csgo pour tous ceux du mois mars

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -20,7 +20,13 @@
 <div class="panel transparent">
   <div class="panel-body text-center">
     Les qualifications seront hebdomadaires et se dérouleront le vendredi et le samedi.<br />
-    Toutes les informations et l'inscription disponible <%= link_to "ici", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg1/infos", target: "blank" %> pour le samedi et <%= link_to "ici", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg2/infos", target: "blank" %> pour le dimanche.
+    Inscrivez-vous sur Glory4gamers, et choisissez un jour de qualification parmi les suivants :<br />
+                                  <%= link_to "vendredi 13/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg3/infos", target: "blank" %>
+                                 - <%= link_to "samedi 14/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg4/infos", target: "blank" %>
+                                 - <%= link_to "vendredi 20/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg5/infos", target: "blank" %>
+                                 - <%= link_to "samedi 21/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg6/infos", target: "blank" %>
+                                 - <%= link_to "vendredi 27/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg7/infos", target: "blank" %>
+                                 - <%= link_to "samedi 28/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg8/infos", target: "blank" %>.
   </div>
 </div>
 
