--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -13,11 +13,11 @@
 </div>
 
 <!-- billeterie -->
-<!--div class="panel panel-iframe">
+<div class="panel panel-iframe">
   <iframe class="embed-responsive-item" width="300" height="88" src="//www.toornament.com/widget/tournaments/54d621a2150ba0424a8b45e0/registration?_locale=fr_FR" frameborder="0" allowfullscreen></iframe>
-</div-->
+</div>
 
-<div class="panel transparent">
+<!--div class="panel transparent">
   <div class="panel-body text-center">
     Les qualifications seront hebdomadaires et se dérouleront le vendredi et le samedi.<br />
     Inscrivez-vous sur Glory4gamers, et choisissez un jour de qualification parmi les suivants :<br />
@@ -28,7 +28,7 @@
                                  - <%= link_to "vendredi 27/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg7/infos", target: "blank" %>
                                  - <%= link_to "samedi 28/03/2015", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg8/infos", target: "blank" %>.
   </div>
-</div>
+</div-->
 
 
 <div class="row">
