remplacement du texte d'horaires

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -34,25 +34,24 @@
         <h4>HORAIRES</h4>
       </div>
       <div class="panel-body">
-        <p>Samedi 25 et Dimanche 26 Avril 2015<br />
-           De 09h00 à 23h30</p>
+        <p>
+          <h4 class="orange">Samedi 25 Avril</h4>
+         Gaming Zone & Discovering Zone & Tournois E-sport<br />
+         Ouverture grand public de 10h à 17h30 <br />
+       </p>
+       <p>
+          <h4 class="orange">Soirée Évènement</h4>
+          De 20h30 à 22h30 (interdit au moins de 16 ans)<br />
+       </p><p>
+          <h4 class="orange">Dimanche 26 Avril</h4>
+          Gaming Zone & Tournois E-sport<br />
+          Ouverture grand public de 10h à 19h30<br /> 
+       </p>
+       <p>
+          Discovering Zone : de 10h à 13h30 
+       </p>
       </div>
     </div>
-
-    <div class="panel transparent">
-      <div class="panel-heading text-center">
-        <!--div class="anchor">
-          <a name="<%#= infotag %>"> </a>
-        </div-->
-       <!--h4 class="info-title" name="<%#= infotag %>"><%#= t("#{infotag}.name") %> </h4-->
-        <h4>TOURNOIS</h4>
-      </div>
-      <div class="panel-body">
-        <p>Samedi 25 Avril : Phases de qualification<br />
-           Dimanche 26 Avril : Finales</p>
-      </div>
-    </div>
-
 
     <div class="panel transparent">
       <div class="panel-heading text-center">
