--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -56,7 +56,7 @@
 	    <h4>REGLES</h4>
 	  </div>
 	  <div class="panel-body">
-	    <h4>Tournoi 16 slots avec des qualifications online, avec un arbre Pro et un arbre Amateur</h4>
+	    <h4>Tournoi 16 slots, avec un arbre Pro et un arbre Amateur</h4>
 	    <h4 class="orange">Déroulement  sur place : </h4>
 	    <ul>
 	      <li>Phase de poule en BO1</li>
