--- a/app/views/static_pages/home/_billeterie.html.erb
+++ b/app/views/static_pages/home/_billeterie.html.erb
@@ -1,6 +1,8 @@
 <div class="billeterie-panel">
+  <% lien_reservation = 'http://www.moxity.com/events/evry-games-city-25-et-26-avril-2015/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' %>
+
   <div class="acheter-places text-center">
-    <a onclick="window.open('http://www.moxity.com/events/evry-games-city-le-nouveau-grand-rendez-vous-des-amateurs-et-des-passionnes-du-jeu-video-en-france/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&', 'Billetterie', 'height=600, width=640, toolbar=no, menubar=no, location=yes, resizable=yes, scrollbars=yes, status=yes');return false;" href="http://www.moxity.com/events/evry-games-city-le-nouveau-grand-rendez-vous-des-amateurs-et-des-passionnes-du-jeu-video-en-france/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&" style="padding:0; background-image:none;display:block; height:50px; overflow:hidden">
+    <a onclick="window.open('<%= lien_reservation %>', 'Billetterie', 'height=600, width=640, toolbar=no, menubar=no, location=yes, resizable=yes, scrollbars=yes, status=yes');return false;" href='<%= lien_reservation %>' style="padding:0; background-image:none;display:block; height:50px; overflow:hidden">
 
       <img src="<%= image_path('BoutonBilleterie_304x100_refait.jpg')%>" width="304" height="100" alt="" border="0" onmouseover="this.style.marginTop='-50px'" onmouseout="this.style.marginTop='0px'" />
   
@@ -9,9 +11,10 @@
 
   </div>
 
+  <% lien_invitation = 'http://www.moxity.com/events/evry-games-city-25-et-26-avril-2015-invitation/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' %>
   <div class="codes-reservation text-center">
 
-    <a onclick="window.open('http://www.moxity.com/events/evry-games-city-le-nouveau-grand-rendez-vous-des-amateurs-et-des-passionnes-du-jeu-video-en-france-invitation/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&', 'Billetterie', 'height=600, width=640, toolbar=no, menubar=no, location=yes, resizable=yes, scrollbars=yes, status=yes');return false;" href='http://www.moxity.com/events/evry-games-city-le-nouveau-grand-rendez-vous-des-amateurs-et-des-passionnes-du-jeu-video-en-france-invitation/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' style="padding:0; background-image:none;display:block; height:50px; overflow:hidden">
+    <a onclick="window.open('<%= lien_invitation %>', 'Billetterie', 'height=600, width=640, toolbar=no, menubar=no, location=yes, resizable=yes, scrollbars=yes, status=yes');return false;" href='<%= lien_invitation %>' style="padding:0; background-image:none;display:block; height:50px; overflow:hidden">
 
       <img src="<%= image_path('BoutonInvitations_304x100_refait.jpg')%>" width="304" height="100" alt="" border="0" onmouseover="this.style.marginTop='-50px'" onmouseout="this.style.marginTop='0px'" />
     </a>
