--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -10,7 +10,7 @@
     Pour toute question qui ne trouverait pas une réponse sur le site, n'hésitez pas à nous contacter directement à l’adresse suivante : <%= link_to "contactpresse@evrygamescity.fr", "mailto:contactpresse@evrygamescity.fr" %>
 
     <div class="pdf_presse">
-      <a href="Communique de presse Evry Games City.pdf" target="_blank">
+      <a href="Communique de presse Evry Games City_v2.pdf" target="_blank">
         <%= image_tag "dossier_presse.jpg", alt: "Communiqué de presse", class:"img-responsive" %>
       </a>
     </div>
