des trucs dans les pages de jeux ! Voilà

--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -28,7 +28,7 @@
 
           <!-- participants -->
           <div class="panel panel-iframe">
-	    <iframe class="embed-responsive-item" width="100%" height="380" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
+	    <iframe class="embed-responsive-item" width="100%" height="520" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
           </div> 
 
 	</div>
@@ -58,7 +58,16 @@
 	      <h4 class="recompenses">RECOMPENSES</h4>
 	    </div>
 	    <div class="panel-body">
-	Cash prize de 2000 euros à répartir entre les 3 premiers.
+	Cash prize de 3000 euros à répartir entre les 3 premiers.<br /><br />
+
+Les joueurs remporteront également :<br />
+
+<span class="orange">1ème place</span>: 9600 RP + Ryze Triomphant / joueurs<br />
+<span class="orange">2ème place</span>: 7200 RP / joueurs<br />
+<span class="orange">3ème place</span>: 4800 RP / joueurs<br />
+<span class="orange">4ème place</span>: 2400 RP / joueurs<br />
+<span class="orange">5ème place – 8ème place</span>: 800 RP / joueurs
+
 	    </div>
 	  </div>
 
