refonte page presentation

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,7 +9,7 @@ body {
   margin-top: $body-margin;
   color: white;
   font-family: 'helvetica';
-  background-color: black;
+  background-color: #040404;
   //background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
