--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -12,6 +12,87 @@
   </div>
 
   <div class="panel-body">
+    <div class="col-md-12 col-xs-12">
+
+      <h3 class="bold orange">EVRY GAMES CITY, C’EST QUOI ?</h3><br />
+      <p style="font-size: 18px;">
+         A l’initiative de l’ENSIIE (Ecole Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) et la Mairie de Evry Centre
+         Essonne (91), <span class="bold orange" style="">EVRY GAMES CITY</span> c’est le nouveau grand rendez-vous annuel « so gaming » de la
+         culture numérique et du jeu vidéo en France.
+      </p><br />
+      <p style="font-size: 18px;">
+        <span class="bold orange">EVRY GAMES CITY</span> ce n’est pas un salon , mais un événement d’un nouveau genre qui a pour ambi-
+        tion de permettre à un large public de se rencontrer, de partager et de découvrir les dernières innovations du
+        secteur.
+      </p><br />
+      <p style="font-size: 18px;">
+        Pour cette première édition, <span class="bold orange">EVRY GAMES CITY</span> voit grand :
+      </p><br />
+      <p class="bold" style="font-family:'helvetica'; font-size: 26px; font-style: italic; font-weight: bold;"><%="2 jours de programmation unique ouverte a tous les publics...".upcase%></p>
+    </div>
+
+    <div class="row">
+	    <div class="col-md-6 col-xs-6">
+	      <%= image_tag "image_presentation_tiny_1.png", class:"img-responsive"%>
+	      <p><span class="orange bold" style="font-size: 24px;">DISCOVERY ZONE</span> (220 m<sup>2</sup>)</p>
+	      <p>Un espace dédié à 15 studios indépendants et Start Up «
+	made in France » pour vous faire découvrir et partager leur
+	nouveaux projets et dernières innovations.
+	Un espace participatif pour s’informer sur les formations
+	ou les filières métiers, rencontrer et échanger avec des
+	professionnels du secteur.</p>
+	      <p><span style="font-weight: bold;">Quelques noms en avant première :</span> He Saw, Cyanide,
+	Wild Factor, Lightbulbcrew, OSome, Aurora Studio, Crown
+	takers, Seaven Studio, Hide, Fireworkscommandship, Enter
+	the Rift…</p>
+	    </div>
+
+	    <div class="col-md-6 col-xs-6">
+	      <%= image_tag "image_presentation_tiny_2.png", class:"img-responsive" %>
+	      <p><span class="orange bold" style="font-size: 24px;">PLAYING ZONE</span> (220 places)</p>
+	      <p>Des tournois e-sport avec un cashprize global à hauteur
+	de 10 000 euros où 200 des meilleurs gamers francais
+	du moment se challengeront pendant 2 jours sur une sé-
+	lection de plusieurs jeux : Counter Strike : Global Offensive,
+	League of Legends, Starcraft 2, HearthStone.</p>
+	      <p><span style="font-weight: bold;">Quelques noms en avant première :</span> AaA, Imaginary Ga-
+	ming, Remake eSport, Melty. Côté Starcraft 2, le grand
+	Stephano sera présent !</p>
+	    </div>
+    </div>
+    <div class="row">
+	     <div class="col-md-6 col-xs-6">
+	      <%= image_tag "image_presentation_tiny_3.png", class:"img-responsive" %>
+	      <p><span class="orange bold" style="font-size: 24px;">GAMING ZONE</span> (250 m<sup>2</sup>)</p>
+	      <p>En partenariat avec Xbox One, Sony Computer, Nintendo,
+	l’association Ouest Game et les médiathèques de l’agglo-
+	mération d’Essonne, un espace de jeu en libre accès avec
+	plus de 65 bornes de jeux et ateliers gaming et (ou) tour-
+	nois amateurs. Venez tester toutes les nouveautés des édi-
+	teurs partenaires !</p>
+	      <p><span style="font-weight: bold">Quelques noms en avant première :</span> Nintendo, Playstation
+	4, Xbox One, Bandai Namco, Capcom, Konami, Warner
+	Bros Games…</p>
+	    </div>
+
+	    <div class="col-md-6 col-xs-6">
+	      <%= image_tag "image_presentation_tiny_4.png", class:"img-responsive" %>
+	      <p><span class="orange bold" style="font-size: 24px;">LEARNING ZONE</span> (3 conférences)</p>
+	      <p>CONFERENCES de 13h à 17h30 (230 places par thème)
+	En partenariat avec la CNJE (comité National des Jeunes
+	Entrepreneurs), 3 conférences seront organisées au
+	théâtre de l’Agora avec pour thèmes :</p>
+	      <p><span class="orange" style="font-weight: bold;">1)</span> Entreprendre dans le monde du jeu vidéo<br />
+	<span class="orange" style="font-weight: bold;">2)</span> Le savoir faire jeu vidéo « made in France »<br />
+	<span class="orange" style="font-weight: bold;">3)</span> Les stratégies de développement dans l’industrie du jeu
+	vidéo</p>
+	    </div>
+    </div>
+
+  </div>
+
+
+  <!--div class="panel-body">
 
     <%= image_tag "Header_presentation2_ter.jpg", class: "img-responsive" %>
 
@@ -41,7 +122,7 @@
       </div>
 
  
-  </div>
+  </div-->
 </div>
 
 
