information : +section hébergement

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -118,7 +118,7 @@
 
 <div class="row">
 
-  <div class="col-md-12">
+  <div class="col-md-6">
 
     <div class="panel transparent"><!-- Services -->
       <div class="panel-heading text-center">
@@ -140,6 +140,45 @@
     </div>
 
   </div>
+
+
+  <div class="col-md-6">
+    <div class="panel transparent"><!-- Hébergement -->
+      <div class="panel-heading text-center">
+        <h4>HEBERGEMENT</h4>
+      </div>
+      <div class="panel-body">
+<p><span style="font-size: 25px;"><%=link_to "ResidHome", "www.residhome.com/" %></span> (Hôtel 4 étoiles)<br />
+1 Rue Ambroise Croizat<br />
+91000 EVRY<br />
+Tel : +33 (0)1 69 47 47 47<br />
+Fax : +33 (0)1 69 47 47 48</p>
+
+<p>À 2 minutes à pied de la gare Évry-Courcouronne Centre</p>
+
+<p><span class="orange">Code promotion disponibles pour :</span>
+<ul>
+<li>Joueurs</li>
+<li>Presse</li>
+<li>Invités d'honneurs</li>
+<li>Spectateurs (dans la limite des places disponibles)</li>
+</ul></p>
+
+<p>Tarifs préférentiels:<br />
+<ul>
+<li>61€/nuit Appartement studio pour 1 ou 2 personnes.</li>
+<li>111€/nuit Suites 2 pièces pour 1 ou 4 personnes.</li>
+</ul>
+</p>
+
+<p><%= link_to "contact@evrygamescity.fr" %> pour faire une demande de promotion pour ResidHome</p>
+      </div>
+  </div>
+
+
+
+
+
 </div>
 
 
