hide widgets et ajout de liste de guests sur jeux

--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -27,8 +27,19 @@
           </div>
 
           <!-- participants -->
-          <div class="panel panel-iframe">
+          <!--div class="panel panel-iframe">
 	    <iframe class="embed-responsive-item" width="100%" height="520" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
+          </div--> 
+
+          <div class="panel transparent">
+            <div class="panel-heading text-center">
+              <h4>GUESTS</h4>
+            </div>
+            <div class="panel-body">
+               IMG
+               Remake Esport
+               aAa
+            </div>
           </div> 
 
 	</div>
