--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -41,8 +41,18 @@
           </div>
 
           <!-- participants -->
-          <div class="panel panel-iframe">
+          <!--div class="panel panel-iframe">
 	    <iframe class="embed-responsive-item" width="100%" height="380" src="//www.toornament.com/widget/tournaments/54d621a2150ba0424a8b45e0/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
+          </div-->
+          <div class="panel transparent">
+            <div class="panel-heading text-center">
+              <h4>GUESTS</h4>
+            </div>
+            <div class="panel-body">
+              LDLC White
+              LDLC Blue
+              Melty Esport Club
+            </div>
           </div> 
 
 	</div>
