--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -27,8 +27,17 @@
           </div>
 
           <!-- participants -->
-          <div class="panel panel-iframe">
+          <!--div class="panel panel-iframe">
 	    <iframe class="embed-responsive-item" width="100%" height="380" src="//www.toornament.com/widget/tournaments/54d622ed150ba0d33b8b4682/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
+          </div--> 
+
+          <div class="panel transparent">
+            <div class="panel-heading text-center">
+              <h4>GUESTS</h4>
+            </div>
+            <div class="panel-body">
+              Stephano
+            </div>
           </div> 
 
 	</div>
