--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -32,9 +32,13 @@
     </div>
 
     <div class="row">
-	    <div class="col-md-6 col-xs-6">
+      <div class="col-md-6 col-xs-6 image-deroulante dropdown">
+          <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown1" aria-expanded="true">
 	      <%= image_tag "image_presentation_tiny_1.png", class:"img-responsive"%>
-	      <p><span class="orange bold" style="font-size: 24px;">DISCOVERY ZONE</span> (220 m<sup>2</sup>)</p>
+	      <p><span class="orange bold" >DISCOVERY ZONE</span> (220 m<sup>2</sup>)</p>
+          </div>
+
+          <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown1">
 	      <p>Un espace dédié à 15 studios indépendants et Start Up «
 	made in France » pour vous faire découvrir et partager leur
 	nouveaux projets et dernières innovations.
@@ -45,11 +49,15 @@
 	Wild Factor, Lightbulbcrew, OSome, Aurora Studio, Crown
 	takers, Seaven Studio, Hide, Fireworkscommandship, Enter
 	the Rift…</p>
-	    </div>
-
-	    <div class="col-md-6 col-xs-6">
+         </div>
+      </div>
+      <div class="col-md-6 col-xs-6 image-deroulante dropdown">
+          <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown2" aria-expanded="true">
 	      <%= image_tag "image_presentation_tiny_2.png", class:"img-responsive" %>
-	      <p><span class="orange bold" style="font-size: 24px;">PLAYING ZONE</span> (220 places)</p>
+	      <p><span class="orange bold">PLAYING ZONE</span> (220 places)</p>
+          </div>
+
+          <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown2">
 	      <p>Des tournois e-sport avec un cashprize global à hauteur
 	de 10 000 euros où 200 des meilleurs gamers francais
 	du moment se challengeront pendant 2 jours sur une sé-
@@ -58,12 +66,20 @@
 	      <p><span style="font-weight: bold;">Quelques noms en avant première :</span> AaA, Imaginary Ga-
 	ming, Remake eSport, Melty. Côté Starcraft 2, le grand
 	Stephano sera présent !</p>
-	    </div>
+         </div>
+      </div>
+
     </div>
+
+
     <div class="row">
-	     <div class="col-md-6 col-xs-6">
+     <div class="col-md-6 col-xs-6 image-deroulante dropdown">
+          <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown3" aria-expanded="true">
 	      <%= image_tag "image_presentation_tiny_3.png", class:"img-responsive" %>
-	      <p><span class="orange bold" style="font-size: 24px;">GAMING ZONE</span> (250 m<sup>2</sup>)</p>
+	      <p><span class="orange bold">GAMING ZONE</span> (250 m<sup>2</sup>)</p>
+          </div>
+
+          <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown3">
 	      <p>En partenariat avec Xbox One, Sony Computer, Nintendo,
 	l’association Ouest Game et les médiathèques de l’agglo-
 	mération d’Essonne, un espace de jeu en libre accès avec
@@ -73,11 +89,16 @@
 	      <p><span style="font-weight: bold">Quelques noms en avant première :</span> Nintendo, Playstation
 	4, Xbox One, Bandai Namco, Capcom, Konami, Warner
 	Bros Games…</p>
-	    </div>
+         </div>
+      </div>
 
-	    <div class="col-md-6 col-xs-6">
+      <div class="col-md-6 col-xs-6 image-deroulante dropdown">
+          <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown4" aria-expanded="true">
 	      <%= image_tag "image_presentation_tiny_4.png", class:"img-responsive" %>
-	      <p><span class="orange bold" style="font-size: 24px;">LEARNING ZONE</span> (3 conférences)</p>
+	      <p><span class="orange bold">LEARNING ZONE</span> (3 conférences)</p>
+          </div>
+
+          <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown4">
 	      <p>CONFERENCES de 13h à 17h30 (230 places par thème)
 	En partenariat avec la CNJE (comité National des Jeunes
 	Entrepreneurs), 3 conférences seront organisées au
@@ -86,52 +107,62 @@
 	<span class="orange" style="font-weight: bold;">2)</span> Le savoir faire jeu vidéo « made in France »<br />
 	<span class="orange" style="font-weight: bold;">3)</span> Les stratégies de développement dans l’industrie du jeu
 	vidéo</p>
-	    </div>
+         </div>
+      </div>
+
     </div>
 
+
+    <div class="row soiree">
+      <div class="soiree_texte">
+      <div class="col-md-5"></div>
+      <div class="col-md-7">
+      <div class="bold visible-xs col-xs-12 orange">
+        <h3>LA SOIREE EVENEMENT</h3>
+      </div>
+      <div class="bold col-md-12">
+        <h4>DE 20h A 22h40 SAMEDI 25 AVRIL</h4>
+      </div>
+	<p>
+	En partenariat avec Virgin Radio et Game One, un show spectacle 
+	« so gaming » totalement déjanté animé par Gen1us (animateur 
+	Game One) et Sacha Judaskzo (humoriste « on ne demande 
+	qu’à en rire » France 2). 
+	</p>
+	<p>
+	Et si ces deux sacrés personnages étaient deux jeunes coloca-
+	taires et que vous découvriez leur drôle d’intimité lors d’une soi-
+	rée ? « Gen1us adore les jeux vidéo, mais pas Sacha qui possède 
+	de sévères à priori sur ce sujet. Cela va laisser place à de nom-
+	breux quiproquo, engueulades, fou-rires, lors de cette soirée où 
+	de nombreux amis qui veulent absolument essayer les nouvelles 
+	sorties jeux vidéo vont passer chez eux. »
+	</p>
+	<p>
+	De nombreuses surprises, guests spécialistes des jeux vidéo et 
+	(ou) du spectacle viendront faire un tour sur scène pendant la 
+	soirée, pour proposer au public un show totalement interactif et 
+	participatif autour de l’univers de chacun des jeux présentés.
+	</p>
+	<p>
+	Des tonnes de dotations seront offertes tout au long de la soirée.
+	</p>
+      </div>
+
+      </div>
+    </div>
   </div>
 
 
-  <!--div class="panel-body">
-
-    <%= image_tag "Header_presentation2_ter.jpg", class: "img-responsive" %>
-
-    <h4 class="orange small_bold">Evry Games City, le nouveau rendez-vous dédié aux jeux vidéo</h4>
-    
-    <div>
-     Pour la première édition, l’Ensiie (Ecole Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) voit grand en créant, en partenariat avec la ville d’Evry, l’événement jeu video les 25 et 26 Avril 2015 aux Arènes de l’Agora.
-    </div>
-    <br />
-
-    <div>
-      Avec plus de 2 000 visiteurs attendus, ce nouveau rendez vous ludique et festif se veut ouvert à tous les publics, passionnés, amateurs ou tout simplement curieux. Evry Games City, c’est 2 jours de programmation et d’expériences uniques autour de l’univers du jeu video : des compétitions, des animations, des espaces de découvertes et de rencontres.
-    </div>
-    <br />
-
-      <div class="tabule">
-        <span class="orange small_bold">1. Le village des cultures numériques : </span>
-      Construit comme un hub du jeu video, cet espace interactif propose à chaque visiteur un parcours expérientiel dans l’univers du jeu video. Au travers de différents points de rencontres, il offre la possibilité à chacun de s’informer, d’explorer, ou de s’essayer à différents scénarios (formation, recherche, entreprenariat, innovations, projets en cours, démonstrations, zone de jeu) tout en permettant les échanges avec les acteurs majeur du territoire.
-      </div><br />
-      <div class="tabule">
-        <span class="orange small_bold">2. Une lanparty géante : </span>
-      Organisée avec le soutien opérationnel de l’EGS, qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stars du jeu vidéo sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone, avec en main event une grande finale, dimanche 26 avril, à la hauteur de l’événement avec plus de 10 000 euros de cash prizes mis en jeu.
-      </div><br />
-      <div class="tabule">
-        <span class="orange small_bold">3. Une grande soirée de 20h à 23h30 : </span>
-      Un show "So Gaming" avec des concerts live, un DJ, des démos jeux video et de nombreuses animations sur scène.
-      </div>
-
- 
-  </div-->
 </div>
 
 
 
-<div class="panel transparent">
-  <div class="panel-heading text-center bold">
+<div class="row panel transparent dropdown panel-deroulant">
+  <div class="panel-heading text-center bold dropdown-toggle" data-toggle="dropdown" id="dropdown5" aria-expanded="true">
     <h3>Evry, ville numérique</h3>
   </div>
-  <div class="panel-body">
+  <div class="panel transparent panel-body dropdown-menu" aria-labelledby="dropdown5">
     <span><h4 class="orange small_bold">Évry ville connectée</h4>
    Ambition majeure de la Ville d’Évry, le numérique est plus que jamais implanté sur notre territoire. Salles informatiques renforcées, partage de contenus, accès à internet amélioré, l’école 2.0 est bien installée à Évry ! Grâce aux nombreuses grandes écoles présentes, Télécom Sud Paris, l’ENSIIE ou encore Télécom École de Management, l’informatique est l’un des atouts de notre territoire.<br /><br />
 
@@ -150,11 +181,11 @@ Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.c
 </div>
 
 
-<div class="panel transparent">
-  <div class="panel-heading text-center bold">
+<div class="row panel transparent dropdown panel-deroulant">
+  <div class="panel-heading text-center bold dropdown-toggle" data-toggle="dropdown" id="dropdown6" aria-expanded="true">
     <h3>L’ENSIIE, grande école d’excellence</h3>
   </div>
-  <div class="panel-body">
+  <div class="panel transparent panel-body dropdown-menu" aria-labelledby="dropdown6">
     <span><h4 class="orange small_bold">École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise - ENSIIE</h4>
 
 Depuis 1968, l’ENSIIE délivre un diplôme d’ingénieur en informatique. Certifiée ISOinformatique. Certifiée ISO 9001, elle accueille chaque année 130 étudiants en cycle initial, 30 en apprentissage et 40 élèves dans son antenne de Strasbourg.<br /><br />
