--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -42,6 +42,7 @@
        <p>
           <h4 class="orange">Soirée Évènement</h4>
           De 20h30 à 22h30 (interdit au moins de 16 ans)<br />
+          En raison du plan Vigipirate, la salle sera fermée dans la nuit du samedi au dimanche
        </p><p>
           <h4 class="orange">Dimanche 26 Avril</h4>
           Gaming Zone & Tournois E-sport<br />
