--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -49,9 +49,9 @@
               <h4>GUESTS</h4>
             </div>
             <div class="panel-body">
-              LDLC White
-              LDLC Blue
-              Melty Esport Club
+              <ul><li>LDLC White</li>
+              <li>LDLC Blue</li>
+              <li>Melty Esport Club</li></ul>
             </div>
           </div> 
 
