--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -36,9 +36,9 @@
               <h4>GUESTS</h4>
             </div>
             <div class="panel-body">
-               IMG
-               Remake Esport
-               aAa
+               <ul><li>IMG</li>
+               <li>Remake Esport</li>
+               <li>aAa</li></ul>
             </div>
           </div> 
 
