--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -36,7 +36,7 @@
               <h4>GUESTS</h4>
             </div>
             <div class="panel-body">
-              Stephano
+              <ul><li>Stephano</li></ul>
             </div>
           </div> 
 
