petites corrections à droite à gauche (samedi 11 avril)

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -36,20 +36,15 @@
       <div class="panel-body">
         <p>
           <h4 class="orange">Samedi 25 Avril</h4>
-         Gaming Zone & Discovering Zone & Tournois E-sport<br />
-         Ouverture grand public de 10h à 17h30 <br />
+         Ouverture de 10h00 à 17h30 <br />
        </p>
        <p>
           <h4 class="orange">Soirée Évènement</h4>
-          De 20h30 à 22h30 (interdit au moins de 16 ans)<br />
+          Le samedi soir, de 20h00 à 22h40 (interdit au moins de 16 ans)<br />
           En raison du plan Vigipirate, la salle sera fermée dans la nuit du samedi au dimanche
        </p><p>
           <h4 class="orange">Dimanche 26 Avril</h4>
-          Gaming Zone & Tournois E-sport<br />
-          Ouverture grand public de 10h à 19h30<br /> 
-       </p>
-       <p>
-          Discovering Zone : de 10h à 13h30 
+          Ouverture de 10h00 à 19h30<br /> 
        </p>
       </div>
     </div>
@@ -69,6 +64,43 @@
            Autobus TICE, arrêt Gare SNCF ou Agora</p>
       </div>
     </div>
+
+
+    <div class="panel transparent"><!-- Hébergement -->
+      <div class="panel-heading text-center">
+        <h4>HEBERGEMENT</h4>
+      </div>
+      <div class="panel-body">
+	<p><span style="font-size: 25px;"><%=link_to "Residhome", "www.residhome.com/" %></span> (Résidence hôtelière 4 étoiles)<br />
+	1 Rue Ambroise Croizat<br />
+	91000 EVRY<br />
+	Tel : +33 (0)1 69 47 47 47<br />
+	Fax : +33 (0)1 69 47 47 48</p>
+
+	<p>À 2 minutes à pied de la gare Évry-Courcouronne Centre</p>
+
+	<p><span class="orange">Code promotion disponibles pour :</span>
+	<ul>
+	<li>Joueurs</li>
+	<li>Presse</li>
+	<li>Invités d'honneurs</li>
+	<li>Spectateurs (dans la limite des places disponibles)</li>
+	</ul></p>
+
+	<p>Tarifs préférentiels:<br />
+	<ul>
+	<li>61€/nuit Appartement studio pour 1 ou 2 personnes.</li>
+	<li>111€/nuit Suites 2 pièces pour 1 ou 4 personnes.</li>
+	</ul>
+	</p>
+
+	<p>Pour toute réservation au Residhome Paris-Evry, veuillez nous contacter à <%= link_to "contact@evrygamescity.fr", "mailto:contact@evrygamescity.fr" %>.</p>
+      </div>
+    </div>
+
+
+
+
 
 
 
@@ -112,15 +144,6 @@
     </div>
 
 
-  </div> <!-- right column -->
-</div>
-
-
-
-<div class="row">
-
-  <div class="col-md-6">
-
     <div class="panel transparent"><!-- Services -->
       <div class="panel-heading text-center">
         <h4>SERVICES</h4>
@@ -140,41 +163,15 @@
       </div>
     </div>
 
-  </div>
 
 
-  <div class="col-md-6">
-    <div class="panel transparent"><!-- Hébergement -->
-      <div class="panel-heading text-center">
-        <h4>HEBERGEMENT</h4>
-      </div>
-      <div class="panel-body">
-<p><span style="font-size: 25px;"><%=link_to "ResidHome", "www.residhome.com/" %></span> (Hôtel 4 étoiles)<br />
-1 Rue Ambroise Croizat<br />
-91000 EVRY<br />
-Tel : +33 (0)1 69 47 47 47<br />
-Fax : +33 (0)1 69 47 47 48</p>
 
-<p>À 2 minutes à pied de la gare Évry-Courcouronne Centre</p>
+  </div> <!-- right column -->
+</div>
 
-<p><span class="orange">Code promotion disponibles pour :</span>
-<ul>
-<li>Joueurs</li>
-<li>Presse</li>
-<li>Invités d'honneurs</li>
-<li>Spectateurs (dans la limite des places disponibles)</li>
-</ul></p>
 
-<p>Tarifs préférentiels:<br />
-<ul>
-<li>61€/nuit Appartement studio pour 1 ou 2 personnes.</li>
-<li>111€/nuit Suites 2 pièces pour 1 ou 4 personnes.</li>
-</ul>
-</p>
 
-<p><%= link_to "contact@evrygamescity.fr" %> pour faire une demande de promotion pour ResidHome</p>
-      </div>
-  </div>
+<div class="row">
 
 
 
