--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -14,19 +14,19 @@
   <div class="panel-body">
     <div class="col-md-12 col-xs-12">
 
-      <h3 class="bold orange">EVRY GAMES CITY, C’EST QUOI ?</h3><br />
-      <p style="font-size: 18px;">
+      <h3 class="bold orange" style="font-size: 18px;">EVRY GAMES CITY, C’EST QUOI ?</h3>
+      <p style="">
          A l’initiative de l’ENSIIE (Ecole Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) et la Mairie de Evry Centre
-         Essonne (91), <span class="bold orange" style="">EVRY GAMES CITY</span> c’est le nouveau grand rendez-vous annuel « so gaming » de la
+         Essonne (91), <span class="orange" style="">EVRY GAMES CITY</span> c’est le nouveau grand rendez-vous annuel « so gaming » de la
          culture numérique et du jeu vidéo en France.
-      </p><br />
-      <p style="font-size: 18px;">
-        <span class="bold orange">EVRY GAMES CITY</span> ce n’est pas un salon , mais un événement d’un nouveau genre qui a pour ambi-
-        tion de permettre à un large public de se rencontrer, de partager et de découvrir les dernières innovations du
+      </p>
+      <p style="">
+        <span class="orange">EVRY GAMES CITY</span> ce n’est pas un salon , mais un événement d’un nouveau genre qui a pour
+        ambition de permettre à un large public de se rencontrer, de partager et de découvrir les dernières innovations du
         secteur.
-      </p><br />
-      <p style="font-size: 18px;">
-        Pour cette première édition, <span class="bold orange">EVRY GAMES CITY</span> voit grand :
+      </p>
+      <p style="">
+        Pour cette première édition, <span class="orange">EVRY GAMES CITY</span> voit grand :
       </p><br />
       <p class="bold" style="font-family:'helvetica'; font-size: 26px; font-style: italic; font-weight: bold;"><%="2 jours de programmation unique ouverte a tous les publics...".upcase%></p>
     </div>
@@ -60,11 +60,11 @@
           <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown2">
 	      <p>Des tournois e-sport avec un cashprize global à hauteur
 	de 10 000 euros où 200 des meilleurs gamers francais
-	du moment se challengeront pendant 2 jours sur une sé-
-	lection de plusieurs jeux : Counter Strike : Global Offensive,
+	du moment se challengeront pendant 2 jours sur une
+        sélection de plusieurs jeux : Counter Strike : Global Offensive,
 	League of Legends, Starcraft 2, HearthStone.</p>
-	      <p><span style="font-weight: bold;">Quelques noms en avant première :</span> AaA, Imaginary Ga-
-	ming, Remake eSport, Melty. Côté Starcraft 2, le grand
+	      <p><span style="font-weight: bold;">Quelques noms en avant première :</span> AaA, Imaginary
+        Gaming, Remake eSport, Melty. Côté Starcraft 2, le grand
 	Stephano sera présent !</p>
          </div>
       </div>
@@ -81,11 +81,11 @@
 
           <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown3">
 	      <p>En partenariat avec Xbox One, Sony Computer, Nintendo,
-	l’association Ouest Game et les médiathèques de l’agglo-
-	mération d’Essonne, un espace de jeu en libre accès avec
-	plus de 65 bornes de jeux et ateliers gaming et (ou) tour-
-	nois amateurs. Venez tester toutes les nouveautés des édi-
-	teurs partenaires !</p>
+	l’association Ouest Game et les médiathèques de
+        l’agglomération d’Essonne, un espace de jeu en libre accès avec
+	plus de 65 bornes de jeux et ateliers gaming et (ou)
+        tournois amateurs. Venez tester toutes les nouveautés des
+        éditeurs partenaires !</p>
 	      <p><span style="font-weight: bold">Quelques noms en avant première :</span> Nintendo, Playstation
 	4, Xbox One, Bandai Namco, Capcom, Konami, Warner
 	Bros Games…</p>
@@ -95,18 +95,16 @@
       <div class="col-md-6 col-xs-6 image-deroulante dropdown">
           <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown4" aria-expanded="true">
 	      <%= image_tag "image_presentation_tiny_4.png", class:"img-responsive" %>
-	      <p><span class="orange bold">LEARNING ZONE</span> (3 conférences)</p>
+	      <p><span class="orange bold">CONFERENCES</span> (3 conférences)</p>
           </div>
 
           <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown4">
-	      <p>CONFERENCES de 13h à 17h30 (230 places par thème)
-	En partenariat avec la CNJE (comité National des Jeunes
-	Entrepreneurs), 3 conférences seront organisées au
+	      <p>CONFERENCES de 13h à 17h30 (200 places par thème).
+	3 conférences seront organisées par par Dièse Junior-Entreprise de l'ENSIIE au
 	théâtre de l’Agora avec pour thèmes :</p>
-	      <p><span class="orange" style="font-weight: bold;">1)</span> Entreprendre dans le monde du jeu vidéo<br />
-	<span class="orange" style="font-weight: bold;">2)</span> Le savoir faire jeu vidéo « made in France »<br />
-	<span class="orange" style="font-weight: bold;">3)</span> Les stratégies de développement dans l’industrie du jeu
-	vidéo</p>
+	      <p><span class="orange" style="font-weight: bold;">1)</span> Entreprendre et se professionnaliser : O'gaming (12h45 - 14h)<br />
+	<span class="orange" style="font-weight: bold;">2)</span> Le jeu vidéo made in France, un industrie en plein essor : AFJV et capital Games (14h15 - 15h30)<br />
+	<span class="orange" style="font-weight: bold;">3)</span> Stratégie de développement d'une multinationale de l'ère du Numérique : ALTEN ( 15h45 - 17h30)</p>
          </div>
       </div>
 
@@ -130,11 +128,11 @@
 	qu’à en rire » France 2). 
 	</p>
 	<p>
-	Et si ces deux sacrés personnages étaient deux jeunes coloca-
-	taires et que vous découvriez leur drôle d’intimité lors d’une soi-
-	rée ? « Gen1us adore les jeux vidéo, mais pas Sacha qui possède 
-	de sévères à priori sur ce sujet. Cela va laisser place à de nom-
-	breux quiproquo, engueulades, fou-rires, lors de cette soirée où 
+	Et si ces deux sacrés personnages étaient deux jeunes
+        colocataires et que vous découvriez leur drôle d’intimité lors d’une
+        soirée ? « Gen1us adore les jeux vidéo, mais pas Sacha qui possède 
+	de sévères à priori sur ce sujet. Cela va laisser place à de
+        nombreux quiproquo, engueulades, fou-rires, lors de cette soirée où 
 	de nombreux amis qui veulent absolument essayer les nouvelles 
 	sorties jeux vidéo vont passer chez eux. »
 	</p>
