--- a/app/views/static_pages/home/_billeterie.html.erb
+++ b/app/views/static_pages/home/_billeterie.html.erb
@@ -4,7 +4,7 @@
 	  <% lien_reservation = 'http://www.moxity.com/events/evry-games-city-25-et-26-avril-2015/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' %>
 	  <%= link_to "BILLETERIE SPECTATEURS", lien_reservation, target: "_blank", class:"btn btn-default btn-block default-billeterie bold", style: "font-size: 18px;" %>
 
-	  <% lien_conferences = "http://www.moxitycom/events/conference_2/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&" %>
+	  <% lien_conferences = "http://www.moxity.com/events/conference_2/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&" %>
 	  <%= link_to "BILLETERIE CONFERENCES", lien_conferences, target: "_blank", class:"btn btn-default btn-block default-billeterie bold", style: "font-size: 18px;" %>
 
 	  <% lien_invitation = 'http://www.moxity.com/events/evry-games-city-25-et-26-avril-2015-invitation/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' %>
