bug fix sur carousel

--- a/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
@@ -2,7 +2,7 @@
 
 <% nbpart = 31 %>
 <% nb_display = 6 %>
-<% nb_lignes =(nbpart/nb_display).round - 1 %>
+<% nb_lignes =(nbpart/nb_display).round %>
 
 <div class="carousel-partenaires">
 
