--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -71,7 +71,7 @@
         <h4>HEBERGEMENT</h4>
       </div>
       <div class="panel-body">
-	<p><span style="font-size: 25px;"><%=link_to "Residhome", "www.residhome.com/" %></span> (Résidence hôtelière 4 étoiles)<br />
+	<p><a class="hoverable" href="http://www.residhome.com/residence-hoteliere-aparthotel-evry-152.html" style=""><%= image_tag "logo_residhome_2.png", width: "100px"%></a> ( Résidence hôtelière 4 étoiles )<br />
 	1 Rue Ambroise Croizat<br />
 	91000 EVRY<br />
 	Tel : +33 (0)1 69 47 47 47<br />
