--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -27,11 +27,11 @@
           </div>
 
           <!-- participants -->
-          <!--div class="panel panel-iframe">
+          <div class="panel panel-iframe">
 	    <iframe class="embed-responsive-item" width="100%" height="520" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
-          </div--> 
+          </div> 
 
-          <div class="panel transparent">
+          <!--div class="panel transparent">
             <div class="panel-heading text-center">
               <h4>GUESTS</h4>
             </div>
@@ -40,7 +40,7 @@
                <li>Remake Esport</li>
                <li>aAa</li></ul>
             </div>
-          </div> 
+          </div--> 
 
 	</div>
 
