--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -27,18 +27,18 @@
           </div>
 
           <!-- participants -->
-          <!--div class="panel panel-iframe">
+          <div class="panel panel-iframe">
 	    <iframe class="embed-responsive-item" width="100%" height="380" src="//www.toornament.com/widget/tournaments/54d622ed150ba0d33b8b4682/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
-          </div--> 
+          </div> 
 
-          <div class="panel transparent">
+          <!--div class="panel transparent">
             <div class="panel-heading text-center">
               <h4>GUESTS</h4>
             </div>
             <div class="panel-body">
               <ul><li>Stephano</li></ul>
             </div>
-          </div> 
+          </div--> 
 
 	</div>
 
