--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -77,7 +77,7 @@
 	Tel : +33 (0)1 69 47 47 47<br />
 	Fax : +33 (0)1 69 47 47 48</p>
 
-	<p>À 2 minutes à pied de la gare Évry-Courcouronne Centre</p>
+	<p>À 2 minutes à pied de la gare Évry-Courcouronnes Centre</p>
 
 	<p><span class="orange">Code promotion disponibles pour :</span>
 	<ul>
