formulaire de contact pour information/hébergement

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -94,7 +94,7 @@
 	</ul>
 	</p>
 
-	<p>Pour toute réservation au Residhome Paris-Evry, veuillez nous contacter à <%= link_to "contact@evrygamescity.fr", "mailto:contact@evrygamescity.fr" %>.</p>
+	<p>Pour toute réservation au Residhome Paris-Evry, veuillez remplir le formulaire disponible à cette adresse : <%= link_to "goo.gl/forms/k3VqVF09f6", "http://goo.gl/forms/k3VqVF09f6", target: "_blank" %>.</p>
       </div>
     </div>
 
