changement des récompenses des tournois

--- a/app/views/jeux/hs.html.erb
+++ b/app/views/jeux/hs.html.erb
@@ -60,7 +60,9 @@
 	      <h4 class="recompenses">RECOMPENSES</h4>
 	    </div>
 	    <div class="panel-body">
-      Les vainqueurs seront récompensés par une ensemble de lots fournis par nos partenaires
+<span class="orange">1er</span> : Clavier, Casque, Souris, Paire d'écouteurs, Tapis de souris<br />
+<span class="orange">2ème</span> : Casque, Souris, Paire d'écouteurs, Tapis de souris<br />
+ <span class="orange">3ème</span> : Souris, Paire d'écouteurs, Tapis de souris<br />
 	    </div>
 	  </div>
 
@@ -73,7 +75,7 @@
 	      <h4 class="orange">Les joueurs doivent amener :</h4>
 	      <div class="tabule">- Leur ordinateur personnel (fixe ou portable)</div>
 	      <div class="tabule">- Leurs périphériques (clavier, souris, casque)</div>
-	      <div class="tabule">- Un câble RJ45 (câblage droit) de 3m minimum</div>
+	      <div class="tabule">- Un câble RJ45 (câblage droit) de 10m minimum</div>
 
 	      <br />
 	      <p>Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement.</p>
