--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -69,9 +69,19 @@
 	      <h4 class="recompenses">RECOMPENSES</h4>
 	    </div>
 	    <div class="panel-body">
-	Cash prize de 3000 euros à répartir entre les 3 premiers.<br /><br />
 
-Les joueurs remporteront également :<br />
+              <h4 class="orange text-center">Tournoi pro</h4>
+<span class="orange">1er</span> : 1500€, 5 Claviers, 5 Casques, 5 Souris, 5 Paires d'écouteurs, 5 Tapis de souris<br />
+<span class="orange">2ème</span> : 1000€<br /> 
+<span class="orange">3ème</span> : 500€<br /> 
+
+              <h4 class="orange text-center">Tournoi amateur</h4>
+<span class="orange">1er</span> : 5 Casques <br />
+<span class="orange">2ème</span> : 5 Casques <br />
+
+
+
+              <h4 class="orange text-center">Les joueurs des deux tournois remporteront également</h4>
 
 <span class="orange">1ème place</span>: 9600 RP + Ryze Triomphant / joueurs<br />
 <span class="orange">2ème place</span>: 7200 RP / joueurs<br />
@@ -91,7 +101,7 @@ Les joueurs remporteront également :<br />
 	      <h4 class="orange">Les joueurs doivent amener :</h4>
 	      <div class="tabule">- Leur ordinateur personnel (fixe ou portable)</div>
 	      <div class="tabule">- Leurs périphériques (clavier, souris, casque)</div>
-	      <div class="tabule">- Un câble RJ45 (câblage droit) de 3m minimum</div>
+	      <div class="tabule">- Un câble RJ45 (câblage droit) de 10m minimum</div>
 	      <br />
 	      <p>Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement.</p>
 	    </div>
