--- a/app/views/static_pages/streams.html.erb
+++ b/app/views/static_pages/streams.html.erb
@@ -4,9 +4,9 @@
   </div>
 </div>
 
-<%= image_tag "EGC-stream-soon.jpg", class: "img-responsive" %>
+<%#= image_tag "EGC-stream-soon.jpg", class: "img-responsive" %>
 
-<!--div class="row">
+<div class="row">
   <div class="col-md-12 stream-navbar">
       <ul id="myTab" class="nav nav-tabs" role="tablist">
 
@@ -39,7 +39,7 @@
 	</div>
   </div>
 
-</div-->
+</div>
 
 
 
