--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,7 +62,7 @@
         </li>
 
         <li class="<%= set_active("streams")%>">
-          <a class="navlink" href="/streams">STREAMS</a>
+          <a class="navlink" href="/streams/<%=Stream.first.id%>">STREAMS</a>
         </li>
         <li class="<%= set_active("partenaires")%>">
           <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
