--- a/app/assets/stylesheets/streams.css.scss
+++ b/app/assets/stylesheets/streams.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Streams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.active_stream {
+  background-color: black;
+}
+
+.stream {
+  background-color: #eee;
+}
