--- a/app/views/streams/_header_stream.html.erb
+++ b/app/views/streams/_header_stream.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-md-12 stream-navbar">
       <ul class="nav nav-tabs">
-        <% @streams.each do |stream| %>  
+        <% @streams.reverse.each do |stream| %>  
           <li role="presentation" class="stream_li">
             <%= link_to stream.name + " | " + t("#{stream.jeu}.mini_name"), stream, class: @stream == stream ? "active_stream" : "stream"%>
           </li>
